Make scrollbars pretty, add empty state, fix width of component nav

--- a/styleguide-theme/static/css/styleguide.css
+++ b/styleguide-theme/static/css/styleguide.css
@@ -145,6 +145,10 @@ body.nav-showing .btn-hamburger {
   z-index: 9999;
 }
 
+.component-nav ul {
+  max-width: calc(100% - 275px);
+}
+
 @media(min-width: 768px) {
   .component-nav {
     display: block;
