--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,8 +3,12 @@
 @import 'buttons';
 @import 'cards';
 @import 'colors';
+@import 'empty';
 @import 'forms';
 @import 'icons';
+@import 'mixins';
 @import 'spacing';
 @import 'tables';
 @import 'typography';
+
+@include scrollbars(8px, darken(#ddd, 18%));
